--- a/src/Abm.Sparked.eRequesting.Demo.Common/Abm.Sparked.eRequesting.Demo.Common.csproj
+++ b/src/Abm.Sparked.eRequesting.Demo.Common/Abm.Sparked.eRequesting.Demo.Common.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Abm.Sparked.Common\Abm.Sparked.Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
